fix: routing sysconfig
